data/tmp folder changes; moved rabbitlistener to sep class